2005-08-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-mozilla-plugin.cpp:
	  So, Apple's javascript API is confusing. Stop is Rewind, Pause is
	  Stop and thus Stop is not Stop. So let's Rewind and not Stop on
	  exit.

2005-08-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-volume.c: (bacon_volume_button_new),
	(bacon_volume_scale_value_changed):
	* src/bacon-volume.h:
	* src/totem-mozilla-viewer.c: (totem_volume_create):
	* src/totem.c: (totem_volume_create):
	  So those were volume control enhancements that are needed for
	  Rhythmbox (different icon size). I apparently committed this.
	  Oops. Ohwell.

2005-08-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-mozilla-plugin.cpp:
	  More refcount fixes, with help from Christian Persch
	  <chpe@gnome.org>; now, if you kill the totem-mozilla-viewer (to
	  simulate a crash at random points... It'll happen at some point),
	  firefox happily lives on.
	* src/totem-mozilla-scriptable.cpp:
	  Remove support for old mozilla versions (NS_INIT_ISUPPORTS()),
	  since they don't work anyway.

2005-08-09  Bastien Nocera  <hadess@hadess.net>

	* src/ev-sidebar.c: (ev_sidebar_destroy): revert a leak fix that was
	causing a crash on exit (Closes: #313010)

2005-08-09  Michaël Arnauts  <michael.arnauts@gmail.com>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* README:
	  Fix link, fix typo (#313019).

2005-08-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-sidebar.c: (cb_resize), (on_sidebar_button_toggled):
	  Resize window if sidebar is shown/hidden (#310257).

2005-08-08  Dennis Cranston <dennis_cranston@yahoo.com>

	* src/totem-playlist.c: (totem_playlist_save_files): Use header 
	capitalization for window title.

2005-08-08  Bastien Nocera  <hadess@hadess.net>

	* src/ev-sidebar.c: (ev_sidebar_destroy),
	(ev_sidebar_menu_item_activate_cb), (ev_sidebar_add_page):
	Port some leak fixes from Evince