@@ -1,3 +1,10 @@
+2005-08-10  Michaël Arnauts  <michael.arnauts@gmail.com>
+
+	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/totem-uri.c: (totem_uri_get_subtitle_uri):
+	  Allow remove subtitles (#312808).
+
 2005-08-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/totem-mozilla-plugin.cpp:
